test/files/neg/t11921c.check
t11921c.scala:6: error: type mismatch;
 found   : A => B
 required: B => B
      def iterator = coll.iterator.map(f)    // coll is ambiguous
                                       ^
1 error
